# VTK

./: .clang-format  .clang-tidy  .codespellrc  .cvsignore  .editorconfig  .editorconfig-checker.json  .git-remote-files  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hooks-config.bash  .kitware-release-paraview.json  .kitware-release.json  .readthedocs.yaml  ACKNOWLEDGMENTS  Base64.c  Base64.h.in  CMakeFilters.cmake  CMakeInstallation.cmake  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYING  COPYING.LGPL  CTestConfig.cmake  CommandLineArguments.cxx  CommandLineArguments.hxx.in  Config.mk  Configure.h.in  Configure.hxx.in  Copyright.txt  DartConfig.cmake  Directory.cxx  Directory.hxx.in  DynamicLoader.cxx  EncodeExecutable.c  FStream.hxx.in  GenerateVTKConfig.cmake  Glob.cxx  (+460 more)
CMake/: CMakeBackwardCompatibilityC.cmake  CMakeLists.txt  CTestCustom.cmake.in  CTestCustom.ctest.in  CheckCXXExpressionCompiles.cmake  CheckCXXSourceRuns.cmake  CompareFileMD5.cmake  ExternalData.cmake  ExtractBoostVersion.cmake  Find3DconnexionClient.cmake  FindADIOS.cmake  FindADIOS1.cmake  FindApplicationServices.cmake  FindBoost.cmake  FindCGNS.cmake  FindCg.cmake  FindDawn.cmake  FindDirectX.cmake  FindEGL.cmake  FindEXPAT.cmake  FindEigen2.cmake  FindEigen3.cmake  FindExprTk.cmake  FindFFMPEG.cmake  FindFREETYPE.cmake  FindFontConfig.cmake  FindFreetype.cmake  FindGL2PS.cmake  FindGLEW.cmake  FindHDF5.cmake  FindHaru.cmake  FindIOKit.cmake  FindJOGL.cmake  FindJsonCpp.cmake  FindLIBPROJ4.cmake  FindLIBXML2.cmake  FindLZ4.cmake  FindLZMA.cmake  FindLibHaru.cmake  FindLibPROJ.cmake  (+267 more)
Charts/: CMakeLists.txt  vtk2DHistogramItem.cxx  vtk2DHistogramItem.h  vtkAbstractContextBufferId.cxx  vtkAbstractContextBufferId.h  vtkAbstractContextItem.cxx  vtkAbstractContextItem.h  vtkAxis.cxx  vtkAxis.h  vtkAxisExtended.cxx  vtkAxisExtended.h  vtkBarMark.cxx  vtkBarMark.h  vtkBlockItem.cxx  vtkBlockItem.h  vtkBrush.cxx  vtkBrush.h  vtkChart.cxx  vtkChart.h  vtkChart2DHistogram.cxx  vtkChart2DHistogram.h  vtkChartHistogram2D.cxx  vtkChartHistogram2D.h  vtkChartLegend.cxx  vtkChartLegend.h  vtkChartMatrix.cxx  vtkChartMatrix.h  vtkChartParallelCoordinates.cxx  vtkChartParallelCoordinates.h  vtkChartPie.cxx  vtkChartPie.h  vtkChartXY.cxx  vtkChartXY.h  vtkChartXYZ.cxx  vtkChartXYZ.h  vtkColor.h  vtkColorLegend.cxx  vtkColorLegend.h  vtkColorSeries.cxx  vtkColorSeries.h  (+101 more)
Chemistry/: CMakeLists.txt  vtkAbstractElectronicData.h  vtkBlueObeliskData.cxx  vtkBlueObeliskData.h  vtkBlueObeliskDataParser.cxx  vtkBlueObeliskDataParser.h  vtkCMLMoleculeReader.cxx  vtkChemistryConfigure.h.in  vtkMoleculeAlgorithm.cxx  vtkMoleculeAlgorithm.h  vtkMoleculeMapper.cxx  vtkMoleculeMapper.h  vtkMoleculeToAtomBallFilter.cxx  vtkMoleculeToAtomBallFilter.h  vtkMoleculeToBondStickFilter.cxx  vtkMoleculeToPolyDataFilter.cxx  vtkMoleculeToPolyDataFilter.h  vtkOpenQubeElectronicData.cxx  vtkOpenQubeMoleculeSource.cxx  vtkPeriodicTable.cxx  vtkPeriodicTable.h  vtkProgrammableElectronicData.cxx  vtkProgrammableElectronicData.h  vtkSimpleBondPerceiver.cxx  vtkSimpleBondPerceiver.h
Common/: CMakeLists.txt  PyVTKClass.cxx  PyVTKObject.cxx  PyVTKObject.h  PyVTKSpecialObject.cxx  PyVTKSpecialObject.h  vtkABI.h  vtkAMRBox.h  vtkAbstractArray.cxx  vtkAbstractArray.h  vtkAbstractGridConnectivity.cxx  vtkAbstractGridConnectivity.h  vtkAbstractIterator.h  vtkAbstractIterator.txx  vtkAbstractList.h  vtkAbstractList.txx  vtkAbstractMap.h  vtkAbstractMap.txx  vtkAbstractMapper.cxx  vtkAbstractMapper.h  vtkAbstractTransform.cxx  vtkAbstractTransform.h  vtkActor2D.cxx  vtkActor2D.h  vtkActor2DCollection.cxx  vtkActor2DCollection.h  vtkAlgorithm.cxx  vtkAlgorithm.h  vtkAmoebaMinimizer.cxx  vtkAmoebaMinimizer.h  vtkAnimationCue.cxx  vtkAnimationCue.h  vtkAnimationScene.cxx  vtkAnimationScene.h  vtkArray.cxx  vtkArray.h  vtkArrayCoordinateIterator.cxx  vtkArrayCoordinateIterator.h  vtkArrayCoordinates.cxx  vtkArrayCoordinates.h  (+699 more)
Examples/: CMakeLists.txt  README.txt  RunExample.cmake  SearchScript.sh  vtkTestingObjectFactory.cmake  vtkTestingObjectFactory.cxx  vtkTestingObjectFactory.h
Filtering/: CMakeLists.txt  vtkAMRBox.cxx  vtkAMRBox.h  vtkAMRBoxUtilities.hxx  vtkAbstractCellLocator.cxx  vtkAbstractCellLocator.h  vtkAbstractGraph.cxx  vtkAbstractGraph.h  vtkAbstractGraphAlgorithm.cxx  vtkAbstractGraphAlgorithm.h  vtkAbstractGridConnectivity.cxx  vtkAbstractGridConnectivity.h  vtkAbstractImageInterpolator.cxx  vtkAbstractImageInterpolator.h  vtkAbstractInterpolatedVelocityField.cxx  vtkAbstractInterpolatedVelocityField.h  vtkAbstractMapper.cxx  vtkAbstractMapper.h  vtkAbstractPointLocator.cxx  vtkAbstractPointLocator.h  vtkActor2D.cxx  vtkActor2D.h  vtkActor2DCollection.cxx  vtkActor2DCollection.h  vtkAdjacentVertexIterator.cxx  vtkAdjacentVertexIterator.h  vtkAlgorithm.cxx  vtkAlgorithm.h  vtkAlgorithmOutput.cxx  vtkAlgorithmOutput.h  vtkAnnotation.cxx  vtkAnnotation.h  vtkAnnotationLayers.cxx  vtkAnnotationLayers.h  vtkAnnotationLayersAlgorithm.cxx  vtkAnnotationLayersAlgorithm.h  vtkApplyFilterCommand.cxx  vtkApplyFilterCommand.h  vtkApplyFilterCommandInternal.h  vtkArrayData.cxx  (+681 more)
GUISupport/: CMakeLists.txt  QVTKWidget.cxx  QVTKWidget.h
GenericFiltering/: CMakeLists.txt  README.html  vtkGenericClip.cxx  vtkGenericClip.h  vtkGenericContourFilter.cxx  vtkGenericContourFilter.h  vtkGenericCutter.cxx  vtkGenericCutter.h  vtkGenericDataSetTessellator.cxx  vtkGenericDataSetTessellator.h  vtkGenericGeometryFilter.cxx  vtkGenericGeometryFilter.h  vtkGenericGlyph3DFilter.cxx  vtkGenericGlyph3DFilter.h  vtkGenericOutlineFilter.cxx  vtkGenericOutlineFilter.h  vtkGenericProbeFilter.cxx  vtkGenericProbeFilter.h  vtkGenericStreamLine.cxx  vtkGenericStreamLine.h  vtkGenericStreamTracer.cxx  vtkGenericStreamTracer.h  vtkGenericStreamer.cxx  vtkGenericStreamer.h
Graphics/: CMakeLists.txt  vtkAnnotationLink.cxx  vtkAnnotationLink.h  vtkAppendCompositeDataLeaves.cxx  vtkAppendCompositeDataLeaves.h  vtkAppendFilter.cxx  vtkAppendFilter.h  vtkAppendPolyData.cxx  vtkAppendPolyData.h  vtkAppendSelection.cxx  vtkAppendSelection.h  vtkArcSource.cxx  (+676 more)
(+42535 files in other folders)
